<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:paddingTop="6dp"
    android:paddingBottom="12dp">

    <ImageView
        android:id="@+id/ivPhoto"
        android:minHeight="100dp"
        android:scaleType="fitXY"
        android:layout_marginTop="-24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_below="@+id/rivUserPhoto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.makeramen.RoundedImageView
        android:id="@+id/rivUserPhoto"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:riv_corner_radius="30dp"
        app:riv_border_width="2dp"
        app:riv_border_color="#FFFFFF"
        app:riv_oval="true"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:scaleType="fitCenter"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvUsername"
        android:text="@string/placeholder_username"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivPhoto"
        android:layout_toRightOf="@+id/rivUserPhoto"
        android:layout_toEndOf="@+id/rivUserPhoto" />

    <TextView
        android:id="@+id/tvRelativeCreatedTime"
        android:text="@string/placeholder_relative_created_time"
        android:textSize="14sp"
        android:textColor="#CCCCCC"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:layout_marginBottom="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivPhoto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tvLikes"
        android:text="@string/default_likes"
        android:textSize="14sp"
        android:textStyle="bold"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:layout_below="@id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvCaption"
        android:text="@string/placeholder_caption"
        android:textSize="14sp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:layout_below="@id/tvLikes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvViewComments"
        android:text="@string/view_more_comments_default"
        android:textSize="14sp"
        android:textColor="#CCCCCC"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCaption"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvLastComments"
        android:text="@string/placeholder_comments"
        android:textSize="14sp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvViewComments"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>